# algorithms

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/algorithms/: __init__.py  sorting.py
tests/algorithms/sorting/: test_insertion_sort.py
