[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Introduction to Algorithms"
authors = ["Pranaya Shrestha <pranaya.shrestha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.7"
black = "^24.4.2"

[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
